Fix overflow text in feed sidebar

--- a/assets/sass/components/feedCategoryItem.scss
+++ b/assets/sass/components/feedCategoryItem.scss
@@ -78,4 +78,13 @@
     align-items: center;
     justify-content: space-between;
   }
+
+  a {
+    max-width: 130px;
+
+    display: inline-block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
